--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/node": "^18.11.17",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.10",
+        "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "^4.0.3",
@@ -41,6 +42,8 @@
         ]
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.191",
+        "@types/lodash.debounce": "^4.0.7",
         "prettier": "^2.8.1"
     },
     "lint": "eslint .",
