--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.10",
         "heic-convert": "^1.2.4",
+        "heic2any": "^0.0.4",
         "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
